sign-in-up page added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
   </head>
-  <body>
+  <body class="index">
     <header class="header" data-header>
       <div class="container">
         <a href="#" class="logo"
@@ -140,6 +140,20 @@
                   </p>
                 </div>
               </li>
+              <li>
+                <div class="service-card">
+                  <div class="card-icon" style="background-color: orange">
+                    <ion-icon name="chatbox"></ion-icon>
+                  </div>
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Card title</a>
+                  </h3>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Ipsum molestiae tenetur blanditiis, odio voluptates facilis?
+                  </p>
+                </div>
+              </li>
             </ul>
           </div>
         </section>
@@ -192,7 +206,7 @@
 
         <section class="section contact" id="#contact" aria-label="conatct">
           <div class="container">
-            <h2 class="h2 section-title">Hane any Questions?</h2>
+            <h2 class="h2 section-title">Have any Questions?</h2>
             <p class="section-text">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur
               asperiores in officia quod voluptatum adipisci cumque ab hic
