color palette refactored

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <figure class="hero-banner">
               <img
-                src="./assets/images/Untitled design(2).svg"
+                src="./assets/images/hero-banner.svg"
                 alt="Hero Banner"
                 width="720"
                 height="673"
@@ -100,7 +100,7 @@
             <ul class="grid-list">
               <li>
                 <div class="service-card">
-                  <div class="card-icon" style="background-color: aquamarine">
+                  <div class="card-icon" style="background-color: #ffcc29">
                     <ion-icon name="chatbox"></ion-icon>
                   </div>
                   <h3 class="h3">
@@ -114,7 +114,7 @@
               </li>
               <li>
                 <div class="service-card">
-                  <div class="card-icon" style="background-color: magenta">
+                  <div class="card-icon" style="background-color: #80e57e">
                     <ion-icon name="chatbox"></ion-icon>
                   </div>
                   <h3 class="h3">
@@ -128,7 +128,7 @@
               </li>
               <li>
                 <div class="service-card">
-                  <div class="card-icon" style="background-color: greenyellow">
+                  <div class="card-icon" style="background-color: #ff6b6b">
                     <ion-icon name="chatbox"></ion-icon>
                   </div>
                   <h3 class="h3">
@@ -142,7 +142,7 @@
               </li>
               <li>
                 <div class="service-card">
-                  <div class="card-icon" style="background-color: orange">
+                  <div class="card-icon" style="background-color: #b594c0">
                     <ion-icon name="chatbox"></ion-icon>
                   </div>
                   <h3 class="h3">
@@ -162,7 +162,7 @@
           <div class="container">
             <div class="about-banner img-holder">
               <img
-                src="./assets/images/about-banner.svg"
+                src="./assets/images/about-banner.png"
                 alt=""
                 class="img-cover"
                 loading="lazy"
@@ -188,6 +188,21 @@
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime
                 porro possimus facilis sit nobis hic optio neque id beatae quae
                 ullam dolorum necessitatibus molestiae, consequuntur doloremque
+                sapiente voluptatum aperiam eum.
+              </p>
+              <h3 class="h3">Things you should know</h3>
+              <p class="section-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime
+                porro possimus facilis sit nobis hic optio neque id beatae quae
+                ullam dolorum necessitatibus molestiae, consequuntur doloremque
+                sapiente voluptatum aperiam eum. <br />
+                ipsum, dolor sit amet consectetur adipisicing elit. Maxime porro
+                possimus facilis sit nobis hic optio neque id beatae quae ullam
+                dolorum necessitatibus molestiae, consequuntur doloremque
+                sapiente voluptatum aperiam eum. <br />
+                ipsum, dolor sit amet consectetur adipisicing elit. Maxime porro
+                possimus facilis sit nobis hic optio neque id beatae quae ullam
+                dolorum necessitatibus molestiae, consequuntur doloremque
                 sapiente voluptatum aperiam eum.
               </p>
             </div>
@@ -287,7 +302,7 @@
     <!-- footer -->
     <footer class="footer-distributed">
       <div class="footer-left">
-        <h3>Gissa</h3>
+        <h3>Uber Stocks</h3>
 
         <p class="footer-links">
           <a href="#">Home</a>
