sign-in-up made responsive

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
                 >Contact Us</a
               >
             </li>
-            <li><a href="#" class="btn btn-primary">Get Started</a></li>
+            <li>
+              <a href="./pages/login.html" class="btn btn-primary"
+                >Get Started</a
+              >
+            </li>
           </ul>
         </nav>
 
@@ -74,7 +78,9 @@
                 sunt voluptate, rem harum odio illo quos.
               </p>
 
-              <a href="#" class="btn btn-primary">Get started</a>
+              <a href="./pages/login.html" class="btn btn-primary"
+                >Get started</a
+              >
             </div>
             <figure class="hero-banner">
               <img
