--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="container">
             <div class="hero-content">
               <p class="hero-subtitle">
-                G-Issa Stock Forcasting Tool
+                Sober Stocks - Stock Forcasting Tool
               </p>
               <h1 class="h1 hero-title">We Build the Future</h1>
               <p class="hero-text">
@@ -308,7 +308,7 @@
     <!-- footer -->
     <footer class="footer-distributed">
       <div class="footer-left">
-        <h3>Uber Stocks</h3>
+        <h3>Sober Stocks</h3>
 
         <p class="footer-links">
           <a href="#">Home</a>
@@ -346,8 +346,8 @@
       <div class="footer-right">
         <p class="footer-company-about">
           <span>About the project</span>
-          <strong>Gissa</strong> is Ghada Issa's senior project in computer
-          science. It's an instrument for understanding future.
+          <strong>Sober Stocks</strong> is Ghada Issa's senior project in
+          computer science. It's an instrument for understanding future.
         </p>
         <div class="footer-icons">
           <a href="#"><i class="uil uil-facebook-f"></i></a>
