--- a/pages/messages.html
+++ b/pages/messages.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    Hello this is my dashboard page!
+    Hello this is my messages page!
 
     <script src="../assets/js/common.js"></script>
   </body>
