--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="header" data-header>
       <div class="container">
         <a href="#" class="logo"
-          ><img src="./assets/images/g(3).svg" alt="Logo"
+          ><img src="./assets/images/rodeo.svg" alt="Logo"
         /></a>
         <nav class="navbar container " data-navbar>
           <ul class="navbar-list">
@@ -110,7 +110,7 @@
                     <ion-icon name="chatbox"></ion-icon>
                   </div>
                   <h3 class="h3">
-                    <a href="#" class="card-title">Card title</a>
+                    <a href="#" class="card-title">Stock Prices</a>
                   </h3>
                   <p class="card-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -124,7 +124,7 @@
                     <ion-icon name="chatbox"></ion-icon>
                   </div>
                   <h3 class="h3">
-                    <a href="#" class="card-title">Card title</a>
+                    <a href="#" class="card-title">Explainable AI</a>
                   </h3>
                   <p class="card-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -138,7 +138,7 @@
                     <ion-icon name="chatbox"></ion-icon>
                   </div>
                   <h3 class="h3">
-                    <a href="#" class="card-title">Card title</a>
+                    <a href="#" class="card-title">Real Time Predictions</a>
                   </h3>
                   <p class="card-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -152,7 +152,7 @@
                     <ion-icon name="chatbox"></ion-icon>
                   </div>
                   <h3 class="h3">
-                    <a href="#" class="card-title">Card title</a>
+                    <a href="#" class="card-title">Expert Input</a>
                   </h3>
                   <p class="card-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
