--- a/pages/common.html
+++ b/pages/common.html
@@ -36,7 +36,7 @@
            -->
           <div class="sidebar-brand">
             <img
-              src="../assets/images/g(3).svg"
+              src="../assets/images/rodeo.svg"
               alt="website logo"
               class="w-logo"
             />
@@ -92,7 +92,12 @@
       </aside>
 
       <!-- main -->
-      <div class="main-container" data-main-container></div>
+      <div class="main-container" data-main-container>
+        <div class="initial-content-container">
+          <img src="../assets/images/main-banner.svg" alt="main banner" />
+          <!-- <h3>Are you ready to explore the world?</h3> -->
+        </div>
+      </div>
       <!-- end main -->
     </div>
     <script src="../assets/js/common.js"></script>
