sidebar navigation works and is responsive

--- a/pages/common.html
+++ b/pages/common.html
@@ -25,8 +25,10 @@
     <div class="grid-container">
       <!-- Header -->
       <header class="dashboard-header">
-        <div class="menu-icon" data-menu-icon>
-          <span class="icon material-icons-outlined">menu</span>
+        <div class="menu-icon">
+          <span class="icon material-icons-outlined" onclick="openSidebar()"
+            >menu</span
+          >
         </div>
         <div class="header-left">
           <span class="icon material-icons-outlined">search</span>
@@ -53,7 +55,7 @@
               class="w-logo"
             />
           </div> -->
-          <span class="icon material-icons-outlined" data-close-icon
+          <span class="icon material-icons-outlined" onclick="closeSidebar()"
             >close</span
           >
         </div>
