minor changes in dashboard

--- a/pages/common.html
+++ b/pages/common.html
@@ -70,21 +70,21 @@
               <span class="material-icons-outlined">favorite</span> Watchlist
             </a>
           </li>
-          <li class="sidebar-list-item">
+          <!-- <li class="sidebar-list-item">
             <a href="../pages/contact.html">
-              <span class="material-icons-outlined">phone</span> Support
+              <span class="material-icons-outlined">phone</span> Contact
             </a>
-          </li>
+          </li> -->
           <li class="sidebar-list-item">
             <a href="../pages/messages.html">
-              <span class="material-icons-outlined">email</span> Messages
+              <span class="material-icons-outlined">note</span> Make a Post
             </a>
           </li>
-          <li class="sidebar-list-item">
+          <!-- <li class="sidebar-list-item">
             <a href="../pages/settings.html">
               <span class="material-icons-outlined">settings</span> Settings
             </a>
-          </li>
+          </li> -->
           <li class="sidebar-list-item">
             <a href="../pages/settings.html">
               <span class="material-icons-outlined">logout</span> Logout
